--- a/Stopwatch/Stopwatch.Windows/MainPage.xaml
+++ b/Stopwatch/Stopwatch.Windows/MainPage.xaml
@@ -5,9 +5,10 @@
     xmlns:local="using:Stopwatch"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:view ="using:Stopwatch.View"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <view:BasicStopwatch Margin="120"/>
     </Grid>
 </Page>
