--- a/Stopwatch/Stopwatch.Windows/MainPage.xaml
+++ b/Stopwatch/Stopwatch.Windows/MainPage.xaml
@@ -9,7 +9,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:view ="using:Stopwatch.View"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    >
 
     <Page.Resources>
         <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
@@ -48,6 +49,7 @@
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
         
-        <view:BasicStopwatch Grid.Row="1" Margin="120,0"/>
+        <!--view:BasicStopwatch Grid.Row="1" Margin="120,0"/-->
+        <view:AnalogStopwatch Grid.Row="1" Margin="30,0"/> 
     </Grid>
 </Page>
